# date_calculator

./: .gitignore  CLAUDE.md  README.md  age_calculator.py  days_ahead.py  pyproject.toml  pytest.ini  weeks_ahead.py
tests/: README.md  test_age_calculator.py  test_days_ahead.py  test_weeks_ahead.py
